--- a/css/map.css
+++ b/css/map.css
@@ -70,6 +70,7 @@
 
 body {color:#111; font-weight:400;}
 a, a:hover {color:#111; cursor:pointer;}
+a:hover {text-decoration:underline;}
 a:focus,
 button:focus {outline:none;}
 
@@ -81,7 +82,6 @@ input.btnstyle,
 
 .btnstyle,
 .btnstyle:hover {border-radius:1px;  letter-spacing:-0.01em;} /* 라운드 크기 및 자간 간격 기본 설정 */
-
 
 /* 색상 값 부분*/
 .btnstyle.blue     		      {background:#318de7; border:1px solid #318de7; color:#ffffff !important;}
@@ -110,8 +110,6 @@ input.btnstyle,
 /* 폰트 bold */
 .amb_btnstyle.b               {font-weight:500;}
 
-
-/* *******  amb_btnstyle에 직접 사이즈 class를 적용한 경우 ******* */
 /* 폰트 크기 부분 -  line-height와 height 2px 차이나는 이유 - border 1px로 인한 텍스트 middle 정렬 때문 */
 .btnstyle.small			  {font-size:13px; font-weight:; height:24px; line-height:22px; padding:0px 10px; font-weight:500;}
 .btnstyle.middle          {font-size:13px; font-weight:; height:30px; line-height:28px; padding:0px 10px; font-weight:500;}
@@ -219,7 +217,6 @@ table.tableStyle .ellipsis {overflow:hidden; text-overflow:ellipsis;white-space:
 table.tableStyle tbody tr:hover {background:rgba(255,255,255,0.5);}
 table.tableStyle tbody tr:hover td {font-weight:bold;}
 
-
 /* table formStyle */
 table.tableStyle.formStyle     {border-width:1px 0px 0px 0px; border-style:solid none none none;}
 table.tableStyle.formStyle th,
@@ -253,6 +250,8 @@ table.tableStyle.gridStyle thead th {background:#f5f6f7; text-align:center; bord
 table.tableStyle.gridStyle tbody td {text-align:;}
 table.tableStyle.gridStyle tbody tr:hover td {font-weight:normal;}
 table.tableStyle.gridStyle tbody th {background:#f5f6f7; border-right:1px solid #ccc;}
+table.tableStyle.gridStyle tbody td {border-right:1px solid #ccc;}
+table.tableStyle.gridStyle tbody tr td:last-of-type {border-right:none;}
 
 /* table topBold */
 table.tableStyle.topBold  {border-top-width:1px; border-top-style:solid; border-top-color:#888;}
@@ -261,7 +260,6 @@ table.tableStyle td img {max-width:100%;}
 
 /* */
 .subTh {color:#e73131; font-size:.5em;}
-
 
 ::-webkit-input-placeholder {color:#aaa;}
 :-moz-placeholder           {color:#aaa; opacity:1;}
@@ -275,11 +273,15 @@ table.tableStyle td img {max-width:100%;}
 .color_red   {color:#e73131 !important;}
 .color_blue  {color:#3192e7 !important;}
 .color_black {color:#000000 !important;}
+.font14      {font-size:14px !important;}
+.font15      {font-size:15px !important;}
+.font16      {font-size:16px !important;}
+.font20      {font-size:20px !important;}
 
 /*************************************/
 /* layout */
 .mapArea {position:absolute; z-index:0; top:50px; bottom:0; left:60px; right:0;  padding-top:0px; overflow:auto; }
-#map     {width:100%; height:100%; margin:0 0; padding:0; display:;}
+#map     {width:100%; height:100%; margin:0 0; padding:0; display:none;}
 .gnbArea {position:absolute; z-index:2; top:0; left:0; width:100%; height:50px;  border-bottom:1px solid rgba(255,255,255,0.2); box-shadow:0 2px 2px rgba(0,0,0,0.05); background:#333336;}
 .lnbArea {position:absolute; z-index:4; top:50px; left:0; bottom:0; width:60px; border-bottom:1px solid #aaa; background:#333336; box-shadow:1px 0px 2px rgba(0,0,0,0.2);}
 .lnbCont {position:absolute; z-index:3; top:50px; left:60px; bottom:0; display:none;}
@@ -297,16 +299,22 @@ body	 {min-height:600px;}
 /* dvIntro */
 #dvIntro   {position:fixed; padding:0; margin:0; top:0; left:0; width:100%; height:100%; background:rgba(255,255,255,0); z-index: 11;}
 
-#dvStreetView {position:fixed; padding:0; margin:0;	top:50px; left:0; width:100%; height:100%;	background: rgb(255, 255, 255);	z-index:9; display:none;}
-#dvStreetViewHeader {padding:0;	margin:0; width:100%; height:30px; background-color:#000;}
-#dvStreetViewContent, #dvStreet {padding:0;	margin:0; width:100%; height:100%; background-color:#000;}
-#dvStreetMini {width:300px; height:300px;}
-/*************************************/
+#dvStreetView {position:fixed; padding:0; margin:0;	top:0px; left:0; right:0; bottom:0; width:100%; height:100%; background:rgb(255, 255, 255); z-index:10; display:none;}
+#dvStreetViewHeader {padding:0;	margin:0; width:100%; height:50px; background-color:#000;  background-color:rgba(0,0,0,1.0);}
+#dvStreetViewHeader .tit {display:inline-block; height:50px; line-height:50px; margin:0 20px; color:#eee; font-size:16px; font-weight:500;}
+#dvStreetViewContent, 
+#dvStreet {padding:0;	margin:0; width:100%; height:100%; background-color:#000;}
+#dvStreetMini {width:300px; height:300px; box-shadow:-1px -1px 2x rgba(0,0,0,0.2);}
 
 /* 파노라마 div */
-.pano-close {text-decoration:none;}
-.pano-close span {color:#fff; font-size:1.5em; position:relative; top:2px; left:98%;}
+.pano-close {width:50px; height:50px; display:block; position:absolute; top:0; right:0; left:auto; }
+.pano-close i {display:block; width:100%; height:100%; line-height:50px; color:#fff; text-align:center; font-size:20px;}
+.pano-close,
+.pano-close:hover {text-decoration:none;}
+.pano-close:hover i {animation:ani_down2 0.2s ease-out 0s 1 alternate;}
+.pano-close span  {display:none;}
 
+/*************************************/
 /* 지도 우측 버튼 */
 .rightArea {font-size:13px; letter-spacing:-0.05em;}
 .rightArea .mapBtn {position:absolute; z-index:1; padding:0px 2px; background-color:#fff; color:#000; border:1px solid #333; height:32px; line-height:28px; cursor:pointer; text-align:center;}
@@ -323,7 +331,6 @@ body	 {min-height:600px;}
 /* 거리뷰 */
 .btnStreetView          {width:32px; top:85px; right:10px; overflow:hidden; text-indent:1000px; background:url('../img/mapRight_icon.png') no-repeat; background-position:0px -60px;}
 .btnStreetView.active   {background-position:-30px -60px;}
-
 
 /*************************************/
 /* mapInnerBox // naverMap custom overlay */
@@ -415,7 +422,6 @@ body	 {min-height:600px;}
 .mapInnerBox.type2 .mibBody .listType {overflow:auto; clear:both; height:97%; margin:1px 1px 0px 0px; padding:20px 20px 20px;}
 .mapInnerBox.type2 .mibBody .listType .listBox {overflow:hidden; clear:both;}
 .mapInnerBox.type2 .mibBody .listType .listBox li {padding:10px 5px; border-bottom:1px solid #555; overflow:hidden; clear:both; color:#fff; color:rgba(255,255,255,0.8); cursor:pointer;}
-.mapInnerBox.type2 .mibBody .listType .listBox li span {}
 .mapInnerBox.type2 .mibBody .listType .listBox li:hover span {animation:ani_down2 0.2s ease-out 0s 1 alternate;}
 
 /* onlyText 스타일 */
@@ -441,7 +447,6 @@ body	 {min-height:600px;}
 .context-btn:hover {background:rgba(0,0,0,0.5); color:#fff;}
 .context-btn:hover .text {animation:ani_down2 0.2s ease-out 0s 1 alternate;font-weight:500;}
 
-
 /*************************************/
 /* GNB  Area */
 .gnbArea {clear:both; text-align:right;}
@@ -450,9 +455,7 @@ body	 {min-height:600px;}
 
 .gnbArea .dvNoticeTicker {display:inline-block; display:none; width:400px; overflow:hidden; position:relative; vertical-align:middle;}
 .gnbArea .dvNoticeTicker:before {display:inline-block; content:''; position:absolute; left:0; top:0; width:30px; height:30px;
-	background:url('../img/gnb_icon.png') no-repeat; 
-	background-position:0 -60px;
-	opacity:0.6;
+	background:url('../img/gnb_icon.png') no-repeat; background-position:0 -60px; opacity:0.6;
 }
 .gnbArea .dvNoticeTicker .newsTicker {height:30px; line-height:30px; overflow:hidden; position:relative; margin:0 0px 0 110px;}
 .gnbArea .dvNoticeTicker .newsTicker li {height:100%; padding:0 5px; margin:0;}
@@ -470,7 +473,6 @@ body	 {min-height:600px;}
 .gnbArea .dvEtc .unit.logout:after       {background-position:-30px -180px;}
 .gnbArea .dvEtc .unit.logout {display:none;}
 
-.gnbArea .dvEtc .unit.fullScreen {}
 .gnbArea .dvEtc .unit.fullScreen:after     {background-position:-30px -210px;}
 .gnbArea .dvEtc .unit.fullScreen.off:after {background-position:-30px -240px;}
 
@@ -492,7 +494,6 @@ body	 {min-height:600px;}
 /* GNB 지도 관련 버튼 */
 .dvBtnArea {font-size:13px; letter-spacing:-0.05em;  display:inline-block; position:relative; vertical-align:top; height:100%; margin-right:10px;}
 .dvBtnArea .mapBtn {position:absolute; z-index:1; padding:0px 2px; background-color:#545759; color:#fff; border:1px solid #6c6e71; height:30px; line-height:28px; cursor:pointer; text-align:center;}
-.dvBtnArea .mapBtn:hover {}
 .dvBtnArea .mapBtn.active {background-color:#2a7cdd; color:#fff; border:1px solid rgba(255,255,255,0.2); opacity:1;}
 
 /* 위성 */
@@ -564,7 +565,6 @@ body	 {min-height:600px;}
 /* LNB  lnbCont */
 .lnbCont {display:block; opacity:1.0;}
 .lnbContWrap {animation:ani_down 0.2s ease-out 0s 1 alternate;  display:none; width:100%; height:100%; min-width:200px; position:relative;  border-right:1px solid #aaa; border-left:0px solid #aaa; margin:0px 0 0 0px; box-shadow:1px 0 2px rgba(0,0,0,0.2); background:#fff;}
-.lnbContWrap:before {}
 .lnbContWrap .headArea {border-bottom:1px solid #ccc; display:block; position:absolute; width:100%; top:0; left:0; right:0; background-color:#2a7cdd; height:50px;}
 .lnbContWrap .bodyArea {border-left:1px solid #ccc; position:absolute; width:100%; top:50px; bottom:50px; left:0; right:0; margin:0 0; background:#f5f6f7; overflow:auto; }
 .lnbContWrap .bodyArea::-webkit-scrollbar {width:8px; height:8px;}
@@ -579,21 +579,11 @@ body	 {min-height:600px;}
 .lnbContWrap .footerEtcText .tit:before {display:inline-block; content:'※'; font-weight:; position:absolute; left:-2px;}
 .lnbContWrap .footerEtcText .cont {line-height:1.5em;}
 
-
 /*************************************/
 /* modal */
-.modal.fade .modal-dialog {}
-
 .modal {background:rgba(0,0,0,0.5); text-align:center; padding:0 !important; width:100%; height:100%; display:none;}
 .modal.in {animation:ani_down2 0.2s ease-out 0s 1 alternate;}
-/*
-.modal.in .modal-dialog {z-index:1041;
-	-webkit-transform: translate(0, -50%);
-    -ms-transform: translate(0, -50%);
-    -o-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-}
-*/
+
 .modal.in .modal-dialog {z-index:1041; }
 .modal .modal-dialog {display:block; text-align:left;  vertical-align:middle; margin:0 auto; max-width:96%; top:50%;}
 
@@ -622,9 +612,9 @@ body	 {min-height:600px;}
 .w_2_1          {width:50%;}
 .w_3_1          {width:33.33%; *width:33.3%; }
 .w_3_2          {width:66.66%; *width:66.6%; }
-.w_4_1          {width:25%;  }
-.w_4_2          {width:50%;  }
-.w_4_3          {width:75%;  }
+.w_4_1          {width:25%;}
+.w_4_2          {width:50%;}
+.w_4_3          {width:75%;}
 .g_column:last-child {padding-right:0px;}
 .g_column:last-of-type {padding-right:0px;}
 
@@ -934,7 +924,6 @@ body	 {min-height:600px;}
 
 /*************************************/
 /* tooltip */
-.tooltip {}
 .tooltip .tooltip-inner {background-color:; padding:5px 10px; font-size:14px;}
 .tooltip .tooltip-arrow {border-top-color:;}
 
@@ -955,7 +944,6 @@ body	 {min-height:600px;}
 td .rangeSliderWrap {padding:0 25px 0 10px; position:relative;}
 td .rangeSliderWrap .rangeSlider {margin:0 0;}
 
-
 /*************************************/
 /* LNB  lnbCont -  주소 검색 */
 .adressSArea {margin:20px 20px; position:absolute; top:0; right:0; left:0; overflow:auto; z-index:1; }
@@ -971,7 +959,6 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 .adressSAreaResult {position:relative; overflow:auto; padding:10px 20px; margin-top:90px; }
 .adressSAreaResult table.tableStyle th, 
 .adressSAreaResult table.tableStyle td {padding-top:10px; padding-bottom:10px;}
-
 
 /*************************************/
 /* LNB  lnbCont  - dvTooja 투자 유망 지역 검색 */
@@ -1006,15 +993,12 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 .mulgunListTerm {border-top:1px solid #ccc; padding:15px 18px 10px}
 .mulgunListTerm .tit {display:block; overflow:hidden; font-weight:500; font-size:12px; margin:0 3px 5px;}
 
-
 /*************************************/
 /* LNB  lnbCont  - heatmapList HeatMap 보기 */
 .heatmapList {border:0px solid #000; overflow:; padding:20px;}
 .heatmapList li {padding:4px 0;}
 .heatmapList li:hover .rdchBox {animation:ani_down 0.2s ease-out 0s 1 alternate;}
 
-
-/*************************************/
 /*************************************/
 /*************************************/
 /* modal 상세보기 영역 */
@@ -1026,7 +1010,6 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 .dvProfit td .inputGroup > span.inline,
 .dvProfit td .inputGroup > .spinner {float:left;}
 .dvProfitDetail .slideShow {margin-left:10px;}
-
 
 /*************************************/
 /* dvCateGwansim // 관심물건등록 */
@@ -1043,18 +1026,23 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 .drawingLegend li {padding:2px 0;}
 .drawingLegend li * {vertical-align:middle;}
 
-
 /*************************************/
 /* dvCateMaemul // 매물등록 */
 .dvCateMaemul {}
 
+/*************************************/
+/* dvGyeongmaeDetail // 경매 상세보기 */
+.detailWrap .tabWrap .nav-tabs .tabLink {height:32px;}
+.detailWrap .tabWrap .nav-tabs .tabLink > a, 
+.detailWrap .tabWrap .nav-tabs .tabLink > button {padding:0px 25px 2px;}
 
-/*************************************/
-/*************************************/
-/* dvGyeongmaeDetail // 경.공매 상세보기 */
+.detailWrap .tabWrap .tab-pane .unit:nth-of-type(1) > .unit_tit:nth-of-type(1) {margin-top:0px;}
+.detailWrap .unit .unit_tit {margin-top:15px;}
+.detailWrap .unit .unit_tit .sTit {font-size:14px; padding:0 0 0 18px; color:#000; font-weight:bold;}
+.detailWrap .unit .unit_tit .sTit:before {display:;}
+.detailWrap .unit .unit_tit .sTit:before {display:inline-block; content:'';border:none; border-radius:0; width:11px; height:11px; position:absolute; left:0; top:50%; margin-top:-6px; background:url('../img/bullet_01.png') no-repeat center center; background-size:100%; 100%;}
+
 .dvGyeongmaeDetail {}
-.imageViewBox {overflow:hidden; min-width:400px; height:; text-align:center;}
-.imageViewBox img {max-width:100%; max-height:600px;}
 
 /* 인근매각물건사례 탭컨텐츠*/
 .dvMaegagmulgeon {}
@@ -1062,8 +1050,23 @@ input.searchInp {display:block; width:100%; border:2px solid #ddd; height:50px; 
 .dvMaegagmulgeon.tabWrap .nav-tabs .tabLink > a, 
 .dvMaegagmulgeon.tabWrap .nav-tabs .tabLink > button {padding:0px 25px 2px;}
 
+/*************************************/
+/* dvGongmaeDetail // 공매 상세보기 */
+.dvGongmaeDetail {}
+.dvGongmaeTab {}
+
+.typeListBox {overflow:auto; clear:both;}
+.typeListBox.fileDownBox li {display:inline-block; width:33.33%; float:left;}
+.typeListBox li {position:relative; padding:5px 10px; overflow:auto;}
+
+.fileDown {display:inline-block; position:relative;}
+.fileDown i {display:inline-block; width:14px; height:14px; vertical-align:middle; font-size:12px; margin-right:5px;}
 
 /*************************************/
+/* imageViewBox // 사진이미지보기 모달 */
+.imageViewBox {overflow:hidden; min-width:400px; height:; text-align:center;}
+.imageViewBox img {max-width:100%; max-height:600px;}
+
 /*************************************/
 /*************************************/
 /* 공지사항 */
@@ -1124,4 +1127,3 @@ ul.paginglist a:hover {color:#222;}
 .mapLink {display:inline-block; position:relative; height:18px; line-height:18px; }
 .mapLink:after {display:inline-block; content:''; width:20px; height:18px; background:url('../img/marker_search.png') no-repeat center center; background-size:auto 18px; text-align:center; vertical-align:middle; margin:;}
 .mapLink:hover:after {animation:ani_down 0.2s ease-out 0s 1 alternate;}
-
