--- a/css/map.css
+++ b/css/map.css
@@ -281,7 +281,7 @@ table.tableStyle td img {max-width:100%;}
 /*************************************/
 /* layout */
 .mapArea {position:absolute; z-index:0; top:50px; bottom:0; left:60px; right:0;  padding-top:0px; overflow:auto; }
-#map     {width:100%; height:100%; margin:0 0; padding:0; display:none;}
+#map     {width:100%; height:100%; margin:0 0; padding:0; display:;}
 .gnbArea {position:absolute; z-index:2; top:0; left:0; width:100%; height:50px;  border-bottom:1px solid rgba(255,255,255,0.2); box-shadow:0 2px 2px rgba(0,0,0,0.05); background:#333336;}
 .lnbArea {position:absolute; z-index:4; top:50px; left:0; bottom:0; width:60px; border-bottom:1px solid #aaa; background:#333336; box-shadow:1px 0px 2px rgba(0,0,0,0.2);}
 .lnbCont {position:absolute; z-index:3; top:50px; left:60px; bottom:0; display:none;}
@@ -451,7 +451,7 @@ body	 {min-height:600px;}
 /* GNB  Area */
 .gnbArea {clear:both; text-align:right;}
 .gnbArea h1{display:inline-block; height:100%; width:auto; margin:0 30px 0 7px; vertical-align:middle; float:left; border:0px solid #fff;}
-.gnbArea h1 .logo {display:block; width:150px; height:100%; background:url('../img/gnb_logo.png') no-repeat; display:none;}
+.gnbArea h1 .logo {display:block; width:150px; height:100%; background:url('../img/gnb_logo.png') no-repeat; display:;}
 
 .gnbArea .dvNoticeTicker {display:inline-block; display:none; width:400px; overflow:hidden; position:relative; vertical-align:middle;}
 .gnbArea .dvNoticeTicker:before {display:inline-block; content:''; position:absolute; left:0; top:0; width:30px; height:30px;
