--- a/css/pdf.css
+++ b/css/pdf.css
@@ -24,7 +24,7 @@
 
 html,body{width:100%; height:100%;}
 html,body{font-size:12px; }/* 기본 폰트 크기 지정*/
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,form,fieldset,p,button,input,table{margin:0;padding:0; font-size:100%;}
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,form,fieldset,p,button,input,table{margin:0;padding:0; font-size:12px;}
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,form,fieldset,p,button,input,table{font-family: nanumgothic, Nanum Gothic, 나눔고딕, AppleSDGothicNeo, Helvetica, Arial, sans-serif !important; }
 body{*word-break:break-all;-ms-word-break:break-all; -webkit-text-size-adjust:none;/*모바일 가로보기시 글씨 크기 확대 방지*/ }
 img,fieldset,iframe{border:0 none}
@@ -44,26 +44,6 @@ input,textarea,button {-webkit-border-radius:0; border-radius:0;} /* 모바일 w
 
 button, html input[type="button"], input[type="reset"], input[type="submit"] {-webkit-appearance:none;}
 * {box-sizing:border-box;}
-
-::-webkit-scrollbar {width:14px; height:14px;}
-::-webkit-scrollbar-button{} 
-::-webkit-scrollbar-track {background-color:#f1f1f1; border:none;  box-shadow:0; border-radius:0px;}
-::-webkit-scrollbar-track:horizontal {border-top:1px solid #fff;}
-::-webkit-scrollbar-thumb {background-color:rgba(0,0,0,0.2); border-radius:0px; border:0px solid #aaa;}
-::-webkit-scrollbar-corner{} 
-::-webkit-scrollbar-thumb:hover {background-color:rgba(0,0,0,0.4);}
-
-/* ie용 */
-body {
- scrollbar-face-color: #b0b0b0; 
- scrollbar-highlight-color: #a3a3a3;
- scrollbar-shadow-color: #a3a3a3; 
- scrollbar-3dlight-color: #a3a3a3;
- scrollbar-arrow-color: #aaa; 
- scrollbar-track-color: #e0e0e0;
- scrollbar-darkshadow-color: #e0e0e0; 
-}
-
 
 /* common */
 .right    {text-align:right;}
@@ -166,10 +146,6 @@ input.btnstyle,
 .btnstyle.onlyIcon  i[class^="ambicon-"],
 .btnstyle.onlyIcon  i[class*=" ambicon-"]  {padding:0 4px; font-size:16x; line-height:24px; margin-left:0; }
 
-button:disabled,
-.btnstyle:disabled {opacity:0.5; cursor:not-allowed;}
-
-
 /* table */
 table {table-layout:fixed; width:100%; text-align:center;}
 table.tableStyle tr {height:38px;}
@@ -234,6 +210,9 @@ table.tableStyle.topBold  {border-top-width:1px; border-top-style:solid; border-
 
 table.tableStyle td img {max-width:100%;}
 
+table thead.colgroup tr,
+table thead.colgroup tr th {height:0; padding:0; background:#aaa; line-height:0; }
+
 /* */
 .subTh {color:#e73131; font-size:.5em;}
 
@@ -270,33 +249,19 @@ table.tableStyle td img {max-width:100%;}
 .g_column:last-child {padding-right:0px;}
 .g_column:last-of-type {padding-right:0px;}
 
-.unit {overflow:; display:block; margin-bottom:25px;}
-.unit_tit {display:block; clear:both; margin-bottom:3px; min-height:30px;}
-.unit_cont {display:block; clear:both; margin-bottom:5px;}
+.unit {overflow:; display:block; padding-bottom:25px;}
+.unit_tit {display:block; clear:both; padding-bottom:3px; min-height:30px; position:relative;}
+.unit_cont {display:block; clear:both; padding-bottom:5px;}
 
-.unit:after,
-.unit_tit:after,
-.unit_cont:after {display:block; content:''; height:0; line-height:0; padding:0; margin:0; clear:both;}
+.unit_tit .sTit    {display:inline-block; font-size:15px; font-weight:500; padding:0 0 5px 0; position:relative; color:#000; float:left; width:50%;}
+.unit_tit .etcText {display:inline-block; font-size:11px; font-weight:normal; color:#666; float:right; padding:2px 0 0 0;}
 
-.sTit {display:inline-block; font-size:15px; font-weight:500; padding:0 0 0 18px; position:relative; margin-top:6px; color:#000; float:left; background:url('../img/bullet_01.png') no-repeat left center;}
-.sTit:before {display:none;}
-.sTit.circle:before {background:none;}
+.sTit.color_black {color:#333333;}
+.sTit.color_red   {color:#e73131;}
+.sTit.color_blue  {color:#3192e7;}
+.sTit.noBullt     {padding-left:0;}
 
-.sTit.color_black {color:#333;}
-.sTit.color_black:before {background:none; border-color:#333;}
-
-.sTit.color_red {color:#e73131;}
-.sTit.color_red:before {background:none; border-color:#e73131;}
-
-.sTit.color_blue {color:#3192e7;}
-.sTit.color_blue:before {background:none; border-color:#3192e7;}
-
-.sTit.noBullt {padding-left:0;}
-.sTit.noBullt:before {display:none;}
-
-.unit_tit .etcText {display:inline-block; font-size:11px; font-weight:normal; padding:0 0 0 10px; position:relative; margin-top:8px; margin-left:5px; color:#666;}
-
-.btnArea {display:block; margin:10px 0;}
+.sTit .bullet {width:10px; height:10px; vertical-align:middle;}
 
 .inputGroup {display:block; clear:; margin:0 auto;}
 .inputGroup:after {display:block; content:''; height:0; line-height:0; clear:both;}
@@ -305,65 +270,40 @@ table.tableStyle td img {max-width:100%;}
 /*************************************/
 /*************************************/
 
-.typeListBox {overflow:auto; clear:both;}
-.typeListBox.fileDownBox li {display:inline-block; width:33.33%; float:left;}
-.typeListBox li {position:relative; padding:5px 10px; overflow:auto;}
-
-.fileDown {display:inline-block; position:relative;}
-.fileDown i {display:inline-block; width:14px; height:14px; vertical-align:middle; font-size:12px; margin-right:5px;}
-
 /*************************************/
-/* imageViewBox // 사진이미지보기 모달 */
-.imageViewBox {overflow:hidden; min-width:400px; height:; text-align:center;}
-.imageViewBox img {max-width:100%; max-height:600px;}
-
-
 /*  dvProfit // 수지분석 */
-.dvProfit {}
-.dvProfit input.inp {font-weight:bold;}
-.dvProfit td .inputGroup > input,
-.dvProfit td .inputGroup > span.inline,
-.dvProfit td .inputGroup > .spinner {float:left;}
-.dvProfitDetail .slideShow {margin-left:10px;}
 
-
-/**/
-.pageA4 {width:21cm; padding:0cm 0.6cm; margin:1cm auto; background:#fff;}
 .reportPdf {border:0px solid #ccc;}
 .reportPdf img {max-height:300px;}
 
 .break-before {page-break-before:always; line-height:0; height:0.5cm; width:100%; clear:both;}/* 새페이지 시작시 */
 
-.indexPage {border:1px solid #ccc; position:relative; min-height:28.5cm;  height:28.5cm; overflow:auto; text-align:left; background:url('../img/pdfImg_bg.png') no-repeat; background-size:100% 100%; background-color:#f9f9f9;}
-.indexPage .indexUnit {position:absolute; border:0px solid #aaa; width:100%; margin:0 auto; padding:0 2cm;}
-.indexPage .indexTit{top:7cm; font-size:13px; color:#ddd;}
-.indexPage .indexDate{top:16cm; color:#ddd;}
-.indexPage .indexLogo{top:21.5cm;}
-.indexPage .indexFooter{position:absolute; bottom:1.7cm; padding:0 3.5cm;}
+.indexPage {position:relative; height:100%; overflow:auto; text-align:left; background:url('../img/pdfImg_bg.png') no-repeat 0 0; background-size:100%;  background-color:#f9f9f9; padding:0;}
+.indexPage div {background:transparent !important;}
+.indexPage .indexUnit {width:100%; margin:0 auto;}
+.indexPage .indexTit{font-size:13px; color:#ddd;}
+.indexPage .indexDate{color:#ddd;}
+.indexPage .indexLogo{}
+.indexPage .indexFooter{padding:0 3.5cm;}
 
-.indexPage .indexTit span {display:block;}
-.indexPage .indexTit .juso  {font-size:20px; margin-bottom:20px; text-align:center;}
-.indexPage .indexTit .bTit  {font-size:52px; margin-bottom:20px; padding-bottom:20px; letter-spacing:-0.02em; text-align:center; position:relative; font-weight:500; overflow:hidden;}
-.indexPage .indexTit .bTit em {display:block;}
-.indexPage .indexTit .bTit i {display:block; position:; height:2px; background:#ff0000; margin:20px auto 0; width:9.5cm;}
-.indexPage .indexTit .bTit .kor {margin-bottom:10px;}
-.indexPage .indexTit .bTit .eng {font-size:14px; letter-spacing:0.3em; position:absolute; bottom:14px; width:7.6cm; left:50%; margin-left:-3.8cm; background:#1e2126;font-weight:400; color:#ccc; }
-.indexPage .indexTit .sText {font-size:12px; line-height:1.7em; color:#888; padding:0 3cm; margin-top:40px; text-align:center;}
+.indexPage .indexTit .juso  {font-size:20px; padding:0 0 20px 0; text-align:center;}
+.indexPage .indexTit .bTit  {font-size:52px; padding:0 0 40px 0; letter-spacing:-0.02em; text-align:center; position:relative; font-weight:500; overflow:hidden;}
+.indexPage .indexTit .bTit.kor {padding:0 0 10px 0;}
+.indexPage .indexTit .bTit.eng {font-size:14px; letter-spacing:0.3em; font-weight:400; color:#ccc; }
+.indexPage .indexTit .sText {font-size:12px; line-height:1.7em; color:#888; padding:0 2cm; text-align:center;}
 
-.indexPage .indexDate {text-align:right; font-size:13px;}
+.indexPage .indexDate {}
+.indexPage .indexDate .date {text-align:right; font-size:13px; padding:0 50px 0 50px;}
 
-.indexPage .indexLogo .logo {height:40px; display:block; text-align:center;}
-.indexPage .indexLogo .logo img {height:100%;}
+.indexPage .indexLogo .logo {display:block; text-align:center; padding:80px 0 80px; }
+.indexPage .indexLogo .logo img {height:40px;}
 
-.indexPage .indexFooter span {display:block; color:#666;}
-.indexPage .indexFooter .logo {display:inline-block; width:; position:absolute; bottom:0;  height:1.2cm; }
-.indexPage .indexFooter .logo img {height:100%;}
-.indexPage .indexFooter .copyright {display:inline-block; position:relative; padding:0 0 0.1cm 2.2cm;}
-.indexPage .indexFooter .copyright span {display:inline-block; font-size:12px;}
-.indexPage .indexFooter .copyright .adress {width:100%; margin-bottom:5px;}
-.indexPage .indexFooter .copyright .tel {margin-right:10px;}
-.indexPage .indexFooter .copyright .fax {}
-
+.indexPage .indexFooter {display:block; color:#666;}
+.indexPage .indexFooter .logo {display:inline-block; width:; text-align:right; padding:0 0 0 0;}
+.indexPage .indexFooter .logo img {height:50px;}
+.indexPage .indexFooter .copyright {position:relative; padding:0 0 0 0; font-size:12px;  text-align:left;}
+.indexPage .indexFooter .copyright.adress {padding:10px 0 0 20px;}
+.indexPage .indexFooter .copyright.telFax {padding:0 0 0 20px;}
 
 .profitMainCont {clear:both; overflow:auto; border:1px solid #ccc; background:#f9f9f9;}
 .typeUnit {display:inline-block; float:left; width:33.33%; padding:10px 0 10px 80px;}
@@ -373,13 +313,10 @@ table.tableStyle td img {max-width:100%;}
 .typeUnit .tit {display:inline-block; width:100%; font-size:14px; font-weight:500; color:#999; padding:15px 5px 5px;}
 .typeUnit .cont {display:inline-block; width:100%; font-size:16px; font-weight:500; padding:2px 5px 15px;}
 
-
-
 .reportPdf table.pdfDetailTable thead th {border-bottom-color:#ccc;}
 
 .reportPdf table.pdfDetailTable tbody th,
 .reportPdf table.pdfDetailTable tbody td  {border-width:0px 0px 1px 0px; border-style:none none dashed none;} 
-
 
 .reportPdf table.pdfDetailTable tbody tr th {}
 
@@ -392,4 +329,8 @@ table.tableStyle td img {max-width:100%;}
 .reportPdf table.pdfDetailTable tbody .bottomColorBorder {border-bottom-color:#ccc; border-bottom-style:solid;}
 
 .otherTitle {text-align:center; margin-bottom:0.4cm; margin-top:0.5cm; font-size:18px;}
+
+
+
+
 
