--- a/css/map.css
+++ b/css/map.css
@@ -273,6 +273,7 @@ table.tableStyle td img {max-width:100%;}
 .color_red   {color:#e73131 !important;}
 .color_blue  {color:#3192e7 !important;}
 .color_black {color:#000000 !important;}
+.font11      {font-size:11px !important;}
 .font14      {font-size:14px !important;}
 .font15      {font-size:15px !important;}
 .font16      {font-size:16px !important;}
@@ -1184,3 +1185,39 @@ ul.paginglist a:hover {color:#222;}
 
 .companyImg img,
 .companyMap img {max-width:100%; width:100%;}
+
+/* add.css */
+.naver-distance-vertex {position: absolute; z-index: 1; font-size: 1px; line-height: 1px; background-color: rgb(255, 255, 255); border: 2px solid rgb(252, 26, 26); width: 10px; height: 10px; left: -4px; top: -5px;}
+.naver-distance-vertex-text {position:absolute; z-index:2; padding:2px 3px 0; border:1px solid; background:#fff; font-size:11px; letter-spacing:-1px; white-space:nowrap; line-height:14px; left:6px; top:6px; color:#ff0000;}
+.calc-distance-link {position:absolute; z-index:2; left:95px; top:30px;}
+.naver-distance-vertex-total-text {position:absolute; z-index:2; left:-100px; top:0px; padding:2px 3px 0; border:2px solid blue; background:#fff; font-size:11px; letter-spacing:-1px; white-space:nowrap; line-height:30px;}
+.naver-distance-vertex-start {position: absolute; z-index: 1; font-size: 1px; line-height: 1px; background-color: rgb(255, 255, 255); border: 2px solid rgb(252, 26, 26); width: 10px; height: 10px; left: -4px; top: -5px;}
+.naver-distance-vertex-start-text {position:absolute; z-index:2; padding:2px 3px 0; border:1px solid; background:#ff0000; font-size:13px; letter-spacing:-1px; white-space:nowrap; line-height:20px; left:0px; top:-25px; color:#fff; font-weight:bold;}
+.naver-area-div {padding: 2px 3px 0; border:2px solid blue; background:#fff; font-size:12px; letter-spacing: -1px; line-height: 30px;}
+.mulgeon-pano {width:100% !important; height:220px;}
+
+#dvHeatMapCapture img:hover {cursor:pointer;}
+#dvHeatMapCapture table th {height:40px; text-align:center; color:#fff; background-color:#000; font-weight:bold;}
+#dvStreetMini {width:300px; height:300px; border:5px solid aliceblue;}
+
+/* bootstrap tooltip html style */
+.innerTooltip {font-size:.9em;}
+/*#tooltipStepJaesanseT3 .tooltip-inner {min-width:150px; width:150px;}*/
+
+.jusoMarker .close {opacity:0;}
+
+.dvToojaLuris {position:relative; width:100%; height:100%; left:0%; top:0%; z-index:1; display:none;  padding:0px 0px; text-align:center;}
+.dvToojaLuris .dvToojaLurisBox {box-shadow:0 0px 3px rgba(0,0,0,0.3); position:relative; max-width:100%; max-height:100%; margin:0 auto; top:50%; transform: translateY(-50%);}
+.dvToojaLuris .dvToojaLurisBgBack {width:100%; height:100%; position:absolute; top:0; bottom:0; left:0; z-index:-1; background:#000; opacity:0.4;}
+
+.dvToojaLurisHeader {border-bottom:0px solid #ccc; display:block; position:absolute; width:100%; top:0; left:0; right:0; height:50px; background-color:#f5f6f7;}
+.dvToojaLurisBody {border:1px solid #ccc; position:absolute; width:100%; top:50px; bottom:0px; left:0; right:0; margin:0 0; background:#fff; overflow:auto; text-align:center; }
+.dvToojaLurisBody::-webkit-scrollbar {width:8px; height:8px;}
+
+.dvToojaLurisHeader h2 {color:#333; display:inline-block; padding:0 15px; font-size:14px; line-height:48px;}
+.dvToojaLurisHeader .close {display:block; position:absolute; width:50px; height:50px; right:0; top:0; border-left:0px solid rgba(0,0,0,0.05); color:#333; opacity:0.8; font-size:18px;}
+.dvToojaLurisHeader .close:hover {background:rgba(0,0,0,0.05);}
+
+
+.dvToojaLurisBody img {width:90%; max-width:90%; height:auto; margin:30px auto;}
+.dvToojaLurisBody .unit {width:90%; margin:0px auto 20px;}
